--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	
+<div>
 	<div class="logo">
 		<a href="#"><img src="img/logo.jpg" alt="pkulogo"></a>
 		<img src="img/logosw.jpg" id="logo2" alt="starwarslogo" >
@@ -17,8 +17,9 @@
 		<img src="img/bg.jpg" alt="backgroundimg">
 	</div>
 	
-
+</div>
 	
+<div class="content">
 	<div class="inputpart">
 		<form action="#">
 			<input type="text" placeholder="学号" id="input1"><br>
@@ -36,6 +37,6 @@
 		<span>PKU@Naboo</span>
 		
 	</div>
-	
+</div>	
 </body>
 </html>
